--- a/dataset-1.ipynb
+++ b/dataset-1.ipynb
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 109,
    "source": [
     "# Normalized data (10%, 20%, 30%, 100%)\n",
     "\n",
@@ -522,19 +522,19 @@
      "name": "stdout",
      "text": [
       "10 percent of data\n",
-      "Best cross validation accuracy : 0.774 found with K = 16 (NORMALIZED)\n",
+      "Best cross validation accuracy : 0.776 found with K = 10 (NORMALIZED)\n",
       "-------------------------------------------------------------------------------------------\n",
       "\n",
       "20 percent of data\n",
-      "Best cross validation accuracy : 0.783 found with K = 22 (NORMALIZED)\n",
+      "Best cross validation accuracy : 0.760 found with K = 26 (NORMALIZED)\n",
       "-------------------------------------------------------------------------------------------\n",
       "\n",
       "30 percent of data\n",
-      "Best cross validation accuracy : 0.754 found with K = 26 (NORMALIZED)\n",
+      "Best cross validation accuracy : 0.768 found with K = 19 (NORMALIZED)\n",
       "-------------------------------------------------------------------------------------------\n",
       "\n",
       "100 percent of data\n",
-      "Best cross validation accuracy : 0.756 found with K = 28 (NORMALIZED)\n"
+      "Best cross validation accuracy : 0.757 found with K = 24 (NORMALIZED)\n"
      ]
     }
    ],
@@ -542,24 +542,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 110,
    "source": [
-    "# Compare normalized vs unormalized\n",
-    "model_selection = pd.DataFrame(data=[[0.848, 8], [0.756, 28]], columns=['Accuracy', 'K neighbours'])\n"
+    "# Compare normalized vs unormalized\n"
    ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "scatter() missing 1 required positional argument: 'y'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/jx/y0pzll5x2hsc8kpymwzr1vz00000gr/T/ipykernel_99287/232991650.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Compare normalized vs unormalized\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmodel_selection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.848\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0.756\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m28\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Accuracy'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'K neighbours'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_selection\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'training'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: scatter() missing 1 required positional argument: 'y'"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -603,13 +590,27 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Confusion matrix"
+    "## Decision Tree"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Confusion matrix"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "source": [
     "from sklearn import tree, model_selection\n",
     "x, y = datasets.load_iris(return_X_y=True)\n",
@@ -628,21 +629,17 @@
     "print(cmat)\n",
     "print(f'accuracy: {np.sum(np.diag(cmat))/np.sum(cmat)}')"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Decision Tree"
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[4047.  522.]\n",
+      " [ 568.  896.]]\n",
+      "accuracy: 0.819327034642798\n"
+     ]
+    }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
