Applying the model with KNN

--- a/dataset-1.ipynb
+++ b/dataset-1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 154,
    "source": [
     "# 1. Load the datasets into Pandas dataframes\n",
     "names1=['age', 'workclass', 'fnlwgt', 'education', 'education-num', 'marital-status', 'occupation', 'relationship', 'race', 'sex', 'capital-gain', 'capital-loss', 'hours-per-week', 'native-country', 'over-50K']\n",
@@ -54,20 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 155,
    "source": [
     "# Remove instances with missing/invalid data entries\n",
     "dataset1_train.dropna(axis=0, how='any', inplace=True)\n",
     "dataset1_test.dropna(axis=0, how='any', inplace=True)\n",
     "print(dataset1_train.shape)\n",
+    "print(dataset1_test.shape)\n",
     "\n",
-    "# Encode Over 20K as 1\n",
+    "# Encode Over 50K as 1\n",
     "dataset1_train['over-50K'] = dataset1_train['over-50K'].map({'>50K': 1, '<=50K': 0})\n",
-    "dataset1_test['over-50K'] = dataset1_test['over-50K'].map({'>50K': 1, '<=50K': 0})\n",
-    "\n",
-    "# Encode Male as 1\n",
-    "dataset1_train['sex'] = dataset1_train['sex'].map({'Male': 1, 'Female': 0})\n",
-    "dataset1_test['sex'] = dataset1_test['sex'].map({'Male': 1, 'Female': 0})\n",
+    "dataset1_test['over-50K'] = dataset1_test['over-50K'].map({'>50K.': 1, '<=50K.': 0})\n",
     "\n",
     "print(dataset1_train['native-country'].describe()) \n",
     "# Since 91% of native-country data is US, we will categorize this column as \"US\" and \"non-US\".\n",
@@ -75,6 +72,10 @@
     "# Encode US as 1 and non-US as 0\n",
     "dataset1_train['native-country'] = np.where(dataset1_train['native-country']=='United-States', 1, 0)\n",
     "dataset1_test['native-country'] = np.where(dataset1_test['native-country']=='United-States', 1, 0)\n",
+    "\n",
+    "# Encode Male as 1\n",
+    "dataset1_train['sex'] = dataset1_train['sex'].map({'Male': 1, 'Female': 0})\n",
+    "dataset1_test['sex'] = dataset1_test['sex'].map({'Male': 1, 'Female': 0})\n",
     "\n",
     "# Correlation\n",
     "correlations = dataset1_train.corr(method=\"pearson\")\n",
@@ -110,6 +111,7 @@
      "name": "stdout",
      "text": [
       "(30162, 15)\n",
+      "(15060, 15)\n",
       "count             30162\n",
       "unique               41\n",
       "top       United-States\n",
@@ -182,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 156,
    "source": [
     "import category_encoders as ce\n",
     "\n",
@@ -190,7 +192,7 @@
     "# Discrete columns: workclass, education, marital-status, occupation, relationship, sex, native-country\n",
     "encoder = ce.OneHotEncoder(cols=['workclass', 'education', 'marital-status', 'occupation', 'race', 'relationship'], use_cat_names=True)\n",
     "train_encoded_1 = encoder.fit_transform(dataset1_train)\n",
-    "test_encoded_1 = encoder.transform(dataset1_test) \n",
+    "test_encoded_1 = encoder.transform(dataset1_test)\n",
     "\n",
     "names_1_encoded = train_encoded_1.columns"
    ],
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 116,
    "source": [
     "# Normalize\n",
     "from sklearn import preprocessing\n",
@@ -297,7 +299,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 97
+     "execution_count": 116
     },
     {
      "output_type": "display_data",
@@ -541,12 +543,45 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 110,
+   "cell_type": "markdown",
    "source": [
-    "# Compare normalized vs unormalized\n"
+    "### Apply best model on test data"
    ],
-   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "source": [
+    "x, y = test_encoded_1.iloc[:,:-1].to_numpy(), test_encoded_1['over-50K'].to_numpy()\n",
+    "\n",
+    "(nb_instances, nb_features) = x.shape\n",
+    "n_test, n_valid = nb_instances // 5, nb_instances // 5\n",
+    "np.random.seed(5)\n",
+    "inds = np.random.permutation(nb_instances)\n",
+    "x_test, y_test = x[inds[:n_test]], y[inds[:n_test]]\n",
+    "x_rest, y_rest = x[inds[n_test:]], y[inds[n_test:]]\n",
+    "\n",
+    "model = neighbors.KNeighborsClassifier(n_neighbors=12)\n",
+    "y_prob = model.fit(x_rest, y_rest).predict(x_test)\n",
+    "# print('knns shape:', knns.shape)\n",
+    "# print('y_prob shape:', y_prob.shape)\n",
+    "\n",
+    "#To get hard predictions by choosing the class with the maximum probability\n",
+    "y_pred = np.argmax(y_prob,axis=-1)\n",
+    "accuracy = np.sum(y_pred == y_test)/y_test.shape[0]\n",
+    "\n",
+    "print(f'accuracy is {accuracy*100:.1f}.')\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "accuracy is 24.6.\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
