KNN done for dataset 1

--- a/dataset-1.ipynb
+++ b/dataset-1.ipynb
@@ -473,15 +473,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# Graph differences in accuracy for growing samples"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": 109,
    "source": [
     "# Normalized data (10%, 20%, 30%, 100%)\n",
@@ -545,42 +536,51 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Apply best model on test data"
+    "## Results (KNN)\n",
+    "The best model for KNN is obtained with K = 12 on unormalized data (accuracy = 85.6%)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Apply best model on test data"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 160,
    "source": [
+    "# Let's import the sklearn confusion_matrix module\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
     "x, y = test_encoded_1.iloc[:,:-1].to_numpy(), test_encoded_1['over-50K'].to_numpy()\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.15, shuffle=True)\n",
     "\n",
-    "(nb_instances, nb_features) = x.shape\n",
-    "n_test, n_valid = nb_instances // 5, nb_instances // 5\n",
-    "np.random.seed(5)\n",
-    "inds = np.random.permutation(nb_instances)\n",
-    "x_test, y_test = x[inds[:n_test]], y[inds[:n_test]]\n",
-    "x_rest, y_rest = x[inds[n_test:]], y[inds[n_test:]]\n",
+    "best_model = neighbors.KNeighborsClassifier(n_neighbors=12)\n",
+    "best_model.fit(x_train, y_train)\n",
+    "test_pred = best_model.predict(x_test)\n",
     "\n",
-    "model = neighbors.KNeighborsClassifier(n_neighbors=12)\n",
-    "y_prob = model.fit(x_rest, y_rest).predict(x_test)\n",
-    "# print('knns shape:', knns.shape)\n",
-    "# print('y_prob shape:', y_prob.shape)\n",
-    "\n",
-    "#To get hard predictions by choosing the class with the maximum probability\n",
-    "y_pred = np.argmax(y_prob,axis=-1)\n",
-    "accuracy = np.sum(y_pred == y_test)/y_test.shape[0]\n",
-    "\n",
-    "print(f'accuracy is {accuracy*100:.1f}.')\n"
+    "acc = np.mean(test_pred == y_test)\n",
+    "print(confusion_matrix(y_test, test_pred), f'{acc:.3f}')\n"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "accuracy is 24.6.\n"
+      "[[1627   89]\n",
+      " [ 237  306]] 0.856\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Accuracy of the KNN model with test data is 85.6%, as expected."
    ],
    "metadata": {}
   },
