--- a/dataset-1.ipynb
+++ b/dataset-1.ipynb
@@ -367,7 +367,9 @@
     "            tr_inds = tr_inds + list(range((f+1)*n_val, n))\r\n",
     "        #The yield statement suspends function’s execution and sends a value back to the caller\r\n",
     "        #but retains enough state information to enable function to resume where it is left off\r\n",
-    "        yield tr_inds, val_inds"
+    "        yield tr_inds, val_inds\r\n",
+    "\r\n",
+    "accuracy= lambda y, yh: np.mean(y==yh)"
    ],
    "outputs": [],
    "metadata": {}
@@ -582,6 +584,128 @@
     "        plt.tight_layout(pad=5)\r\n",
     "        plt.show()\r\n",
     "        plt.title(title)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Evaluating best max depth limitation with Gini index"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "from sklearn import tree\r\n",
+    "\r\n",
+    "\r\n",
+    "#Find best max depth using Gini index\r\n",
+    "\r\n",
+    "def find_maxD_gini(n_val,x_rest,y_rest,x_test,y_test,title):\r\n",
+    "    max_depth=range(4,8)\r\n",
+    "\r\n",
+    "    acc_train,acc_valid = np.zeros(len(max_depth)), np.zeros((len(max_depth), n_folds))\r\n",
+    "\r\n",
+    "\r\n",
+    "    for i, d in enumerate(max_depth):\r\n",
+    "        #Find the validation errors for num_folds splits for a given max_depth\r\n",
+    "        model = tree.DecisionTreeClassifier(criterion='gini',max_depth=d)\r\n",
+    "        model = model.fit(x_rest, y_rest)\r\n",
+    "        acc_train[i]= accuracy(y_rest, model.predict(x_rest))\r\n",
+    "        for f, (tr, val) in enumerate(cross_validate(n_val, n_folds)):\r\n",
+    "            model = tree.DecisionTreeClassifier(criterion='gini',max_depth=d)\r\n",
+    "            model = model.fit(x_test[tr,:], y_test[tr])\r\n",
+    "            acc_valid[i, f] = accuracy(y_test[val], model.predict(x_test[val])) \r\n",
+    "    \r\n",
+    "    plt.plot(max_depth, acc_train,  label='Train')\r\n",
+    "    plt.errorbar(max_depth, np.mean(acc_valid, axis=1), np.std(acc_valid, axis=1), label='Validation')\r\n",
+    "    plt.legend()\r\n",
+    "    plt.xlabel('Max depth')\r\n",
+    "    plt.ylabel('Accuracy')\r\n",
+    "    plt.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Evaluating best max depth limitation with Entropy "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "from sklearn import tree\r\n",
+    "\r\n",
+    "#Find best max depth using Gini index\r\n",
+    "\r\n",
+    "def find_minsamp_entropy(n_val,x_train,y_train,x_val,y_val,title):\r\n",
+    "    max_depth=range(4,8)\r\n",
+    "\r\n",
+    "    acc_train,acc_valid = np.zeros(len(max_depth)), np.zeros((len(max_depth), n_folds))\r\n",
+    "\r\n",
+    "    #Evaluating value for max depth\r\n",
+    "    for i, d in enumerate(max_depth):\r\n",
+    "        #Find the validation errors for num_folds splits for a max_depth\r\n",
+    "        model = tree.DecisionTreeClassifier(criterion='entropy',max_depth=d)\r\n",
+    "        model = model.fit(x_rest, y_rest)\r\n",
+    "        acc_train[i]= accuracy(y_rest, model.predict(x_rest))\r\n",
+    "        for f, (tr, val) in enumerate(cross_validate(n_val, n_folds)):\r\n",
+    "            model = tree.DecisionTreeClassifier(criterion='entropy',max_depth=d)\r\n",
+    "            model = model.fit(x_test[tr,:], y_test[tr])\r\n",
+    "            acc_valid[i, f] = accuracy(y_test[val], model.predict(x_test[val])) \r\n",
+    "    \r\n",
+    "    plt.plot(max_depth, acc_train,  label='Train')\r\n",
+    "    plt.errorbar(max_depth, np.mean(acc_valid, axis=1), np.std(acc_valid, axis=1), label='Validation')\r\n",
+    "    plt.legend()\r\n",
+    "    plt.xlabel('Max depth')\r\n",
+    "    plt.ylabel('Accuracy')\r\n",
+    "    plt.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Evaluating the best minimum number of samples using Entropy"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "#Find best min number of samples using Entropy\r\n",
+    "\r\n",
+    "def find_minsamp_entrop(n_val,x_train,y_train,x_val,y_val,title):\r\n",
+    "    min_sample=range(3,8)\r\n",
+    "\r\n",
+    "    acc_train,acc_valid = np.zeros(len(min_sample)), np.zeros((len(min_sample), n_folds))\r\n",
+    "\r\n",
+    "    #Evaluating value for max depth\r\n",
+    "    for i, d in enumerate(min_sample):\r\n",
+    "        #Find the validation errors for num_folds splits for a max_depth\r\n",
+    "        model = tree.DecisionTreeClassifier(criterion='entropy',max_depth=d)\r\n",
+    "        model = model.fit(x_rest, y_rest)\r\n",
+    "        acc_train[i]= accuracy(y_rest, model.predict(x_rest))\r\n",
+    "        for f, (tr, val) in enumerate(cross_validate(n_val, n_folds)):\r\n",
+    "            model = tree.DecisionTreeClassifier(criterion='entropy',max_depth=d)\r\n",
+    "            model = model.fit(x_test[tr,:], y_test[tr])\r\n",
+    "            acc_valid[i, f] = accuracy(y_test[val], model.predict(x_test[val])) \r\n",
+    "    \r\n",
+    "    plt.plot(min_sample, acc_train,  label='Train')\r\n",
+    "    plt.errorbar(min_sample, np.mean(acc_valid, axis=1), np.std(acc_valid, axis=1), label='Validation')\r\n",
+    "    plt.legend()\r\n",
+    "    plt.xlabel('Max depth')\r\n",
+    "    plt.ylabel('Accuracy')\r\n",
+    "    plt.show()"
    ],
    "outputs": [],
    "metadata": {}
