--- a/mini-project-1.ipynb
+++ b/mini-project-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "# Visualize all numerical categories\n",
     "dataset2_trn_full.hist(figsize=(20, 14))"
@@ -199,7 +199,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 4
     },
     {
      "output_type": "display_data",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "source": [
     "# Convert discrete variables into multiple variables using one-hot encoding\n",
     "# Discrete columns: workclass, education, marital-status, occupation, relationship, sex, native-country\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "source": [
     "x_d1=train_encoded_1.loc[:, 'age':'hours-per-week']\n",
     "y_d1=train_encoded_1['over-50K']\n",
@@ -373,7 +373,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 6
     },
     {
      "output_type": "display_data",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "source": [
     "# Normalizing data since scales of some attributes are drastically different\n",
     "names2_x=['A1-Time','A2','A3','A4','A5','A6','A7','A8','A9']\n",
@@ -441,7 +441,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 7
     },
     {
      "output_type": "display_data",
@@ -467,8 +467,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "source": [
+    "accuracy= lambda y, yh: np.mean(y==yh)\n",
+    "\n",
     "def splitTraining(p_val,num_instances):\n",
     "    n_val=num_instances//p_val\n",
     "    np.random.seed(5)\n",
@@ -528,6 +530,50 @@
     "                best_acc = acc\n",
     "\n",
     "    return best_acc, best_k\n",
+    "\n",
+    "def find_best_crit(n_val,x_train,y_train,x_val,y_val,title):\n",
+    "    num_folds = 5\n",
+    "    criteria_list=[\"gini\", \"entropy\"] \n",
+    "    acc_train,acc_valid = np.zeros(len(criteria_list)), np.zeros((len(criteria_list), num_folds))\n",
+    "\n",
+    "    model = tree.DecisionTreeClassifier()\n",
+    "    model = model.fit(x_train, y_train)\n",
+    "    acc_train[0]= accuracy(y_train, model.predict(x_train))\n",
+    "\n",
+    "\n",
+    "    for f, (tr, val) in enumerate(cross_validate(n_val, num_folds)):\n",
+    "            model = tree.DecisionTreeClassifier()\n",
+    "            model = model.fit(x_val[tr,:], y_val[tr])\n",
+    "            acc_valid[0,f] = accuracy(y_val[val], model.predict(x_val[val])) \n",
+    "\n",
+    "\n",
+    "    model = tree.DecisionTreeClassifier(criterion=\"entropy\")\n",
+    "    model = model.fit(x_train, y_train)\n",
+    "    acc_train[1]= accuracy(y_train, model.predict(x_train))\n",
+    "\n",
+    "    for f, (tr, val) in enumerate(cross_validate(n_val, num_folds)):\n",
+    "            model = tree.DecisionTreeClassifier(criterion=\"entropy\")\n",
+    "            model = model.fit(x_val[tr,:], y_val[tr])\n",
+    "            acc_valid[1,f] = accuracy(y_val[val], model.predict(x_val[val])) \n",
+    "\n",
+    "    x=[1,2]\n",
+    "\n",
+    "    plt.subplot(1,2,1)\n",
+    "    plt.scatter(x,acc_train, label='training')\n",
+    "    plt.xlabel('Gini Index=1                Entropy=2')\n",
+    "    plt.ylabel('Accuracy')\n",
+    "    plt.title('Training')\n",
+    "\n",
+    "    plt.subplot(1,2,2)\n",
+    "    plt.scatter(x,np.mean(acc_valid, axis=1),label='validation')\n",
+    "    #plt.errorbar(criteria_list, np.mean(err_valid, axis=1), np.std(err_valid, axis=1), label='Validation')\n",
+    "    plt.title('Validation')\n",
+    "    plt.xlabel('Gini Index=1                Entropy=2')\n",
+    "    plt.ylabel('Accuracy')\n",
+    "\n",
+    "    plt.tight_layout(pad=5)\n",
+    "    plt.show()\n",
+    "    plt.title(title)\n",
     "\n",
     "def findBestDepth(x, y):\n",
     "    (nb_instances, nb_features) = x.shape\n",
@@ -641,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "source": [
     "# Data splits (UNORMALIZED)\n",
     "x, y = train_encoded_1.iloc[:,:-1].to_numpy(), train_encoded_1['over-50K'].to_numpy()\n",
@@ -717,15 +763,15 @@
      "name": "stdout",
      "text": [
       "10 percent of data\n",
-      "Best cross validation accuracy : 0.834 found with K = 3 (UNORMALIZED)\n",
+      "Best cross validation accuracy : 0.846 found with K = 2 (UNORMALIZED)\n",
       "-------------------------------------------------------------------------------------------\n",
       "\n",
       "20 percent of data\n",
-      "Best cross validation accuracy : 0.836 found with K = 2 (UNORMALIZED)\n",
+      "Best cross validation accuracy : 0.852 found with K = 2 (UNORMALIZED)\n",
       "-------------------------------------------------------------------------------------------\n",
       "\n",
       "30 percent of data\n",
-      "Best cross validation accuracy : 0.847 found with K = 5 (UNORMALIZED)\n",
+      "Best cross validation accuracy : 0.845 found with K = 21 (UNORMALIZED)\n",
       "-------------------------------------------------------------------------------------------\n",
       "\n",
       "100 percent of data\n",
