Graphs for KNN for datasets

--- a/mini-project-1.ipynb
+++ b/mini-project-1.ipynb
@@ -598,7 +598,7 @@
     "\n",
     "    depth_list = range(1, 30)\n",
     "    num_folds = 5\n",
-    "    best_k = 0\n",
+    "    best_depth = 0\n",
     "    best_acc = 0\n",
     "    for i, D in enumerate(depth_list):\n",
     "        # Find the validation errors for num_folds splits for a given depth\n",
