--- a/mini-project-1.ipynb
+++ b/mini-project-1.ipynb
@@ -1286,6 +1286,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "## Rajoute find best criteria ici"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 58,
    "source": [
     "# Data splits (UNORMALIZED)\n",
