--- a/mini-project-1.ipynb
+++ b/mini-project-1.ipynb
@@ -1000,8 +1000,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 126,
    "source": [
+    "# Data splits (UNORMALIZED)\n",
+    "x, y = train_encoded_1.iloc[:,:-1].to_numpy(), train_encoded_1['over-50K'].to_numpy()\n",
+    "\n",
+    "# Split further for testing purposes (growing samples)\n",
+    "data_30 = train_encoded_1.sample(frac=0.30)\n",
+    "x_30, y_30 = data_30.iloc[:,:-1].to_numpy(), data_30['over-50K'].to_numpy()\n",
+    "\n",
+    "data_20 = train_encoded_1.sample(frac=0.20)\n",
+    "x_20, y_20 = data_20.iloc[:,:-1].to_numpy(), data_20['over-50K'].to_numpy()\n",
+    "\n",
+    "data_10 = train_encoded_1.sample(frac=0.10)\n",
+    "x_10, y_10 = data_10.iloc[:,:-1].to_numpy(), data_10['over-50K'].to_numpy()\n",
+    "\n",
     "x_test, y_test = test_encoded_1.iloc[:,:-1].to_numpy(), test_encoded_1['over-50K'].to_numpy()\n",
     "\n",
     "# 100 %\n",
@@ -1013,7 +1026,7 @@
     "print(confusion_matrix(y_test, test_pred), f'{acc:.3f}')\n",
     "\n",
     "# 30 %\n",
-    "best_model = neighbors.KNeighborsClassifier(n_neighbors=14)\n",
+    "best_model = neighbors.KNeighborsClassifier(n_neighbors=6)\n",
     "best_model.fit(x_30, y_30)\n",
     "test_pred = best_model.predict(x_test)\n",
     "\n",
@@ -1021,7 +1034,7 @@
     "print(confusion_matrix(y_test, test_pred), f'{acc:.3f}')\n",
     "\n",
     "# 20 %\n",
-    "best_model = neighbors.KNeighborsClassifier(n_neighbors=12, weights='distance')\n",
+    "best_model = neighbors.KNeighborsClassifier(n_neighbors=29, weights='distance')\n",
     "best_model.fit(x_20, y_20)\n",
     "test_pred = best_model.predict(x_test)\n",
     "\n",
@@ -1029,7 +1042,7 @@
     "print(confusion_matrix(y_test, test_pred), f'{acc:.3f}')\n",
     "\n",
     "# 10 %\n",
-    "best_model = neighbors.KNeighborsClassifier(n_neighbors=23, weights='distance')\n",
+    "best_model = neighbors.KNeighborsClassifier(n_neighbors=4, weights='distance')\n",
     "best_model.fit(x_10, y_10)\n",
     "test_pred = best_model.predict(x_test)\n",
     "\n",
@@ -1043,12 +1056,12 @@
      "text": [
       "[[10491   869]\n",
       " [ 1464  2236]] 0.845\n",
-      "[[10618   742]\n",
-      " [ 1735  1965]] 0.836\n",
-      "[[10400   960]\n",
-      " [ 1623  2077]] 0.828\n",
-      "[[10658   702]\n",
-      " [ 1944  1756]] 0.824\n"
+      "[[10634   726]\n",
+      " [ 1751  1949]] 0.836\n",
+      "[[10586   774]\n",
+      " [ 1824  1876]] 0.827\n",
+      "[[10191  1169]\n",
+      " [ 1592  2108]] 0.817\n"
      ]
     }
    ],
@@ -1790,12 +1803,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 127,
    "source": [
+    "# Data splits (UNORMALIZED)\n",
+    "x, y = dataset2_trn_full.iloc[:,:-1].to_numpy(), dataset2_trn_full['LABEL'].to_numpy()\n",
+    "\n",
+    "# Split further for testing purposes (growing samples)\n",
+    "data_30 = dataset2_trn_full.sample(frac=0.30)\n",
+    "x_30, y_30 = data_30.iloc[:,:-1].to_numpy(), data_30['LABEL'].to_numpy()\n",
+    "\n",
+    "data_20 = dataset2_trn_full.sample(frac=0.20)\n",
+    "x_20, y_20 = data_20.iloc[:,:-1].to_numpy(), data_20['LABEL'].to_numpy()\n",
+    "\n",
+    "data_10 = dataset2_trn_full.sample(frac=0.10)\n",
+    "x_10, y_10 = data_10.iloc[:,:-1].to_numpy(), data_10['LABEL'].to_numpy()\n",
+    "\n",
     "x_test, y_test = dataset2_test.iloc[:,:-1].to_numpy(), dataset2_test['LABEL'].to_numpy()\n",
     "\n",
     "# 100 %\n",
-    "best_model = neighbors.KNeighborsClassifier(n_neighbors=11, weights='distance')\n",
+    "best_model = neighbors.KNeighborsClassifier(n_neighbors=6, weights='distance')\n",
     "best_model.fit(x, y)\n",
     "test_pred = best_model.predict(x_test)\n",
     "\n",
@@ -1832,33 +1858,33 @@
      "name": "stdout",
      "text": [
       "[[11478     0     0     0     0     0     0]\n",
-      " [    1     9     0     3     0     0     0]\n",
-      " [   14     0    23     2     0     0     0]\n",
-      " [    0     0     0  2155     0     0     0]\n",
-      " [    1     0     0     0   808     0     0]\n",
-      " [    0     0     2     1     0     1     0]\n",
-      " [    2     0     0     0     0     0     0]] 0.998\n",
-      "[[11438     0    39     0     1     0     0]\n",
-      " [    1     8     0     3     0     1     0]\n",
-      " [   13     0    24     2     0     0     0]\n",
-      " [    0     0     1  2154     0     0     0]\n",
-      " [    1     0     0     0   808     0     0]\n",
-      " [    0     0     0     1     0     3     0]\n",
-      " [    2     0     0     0     0     0     0]] 0.996\n",
-      "[[11478     0     0     0     0     0     0]\n",
-      " [    6     4     0     3     0     0     0]\n",
+      " [    1    10     0     2     0     0     0]\n",
       " [   14     0    25     0     0     0     0]\n",
       " [    0     0     0  2155     0     0     0]\n",
       " [    1     0     0     0   808     0     0]\n",
-      " [    0     0     1     3     0     0     0]\n",
+      " [    0     0     1     1     0     2     0]\n",
       " [    2     0     0     0     0     0     0]] 0.998\n",
-      "[[11451     0    27     0     0     0     0]\n",
-      " [    6     1     0     6     0     0     0]\n",
-      " [   14     0    21     2     2     0     0]\n",
+      "[[11478     0     0     0     0     0     0]\n",
+      " [    0     8     0     5     0     0     0]\n",
+      " [   14     0    24     1     0     0     0]\n",
       " [    0     0     1  2154     0     0     0]\n",
       " [    1     0     0     0   808     0     0]\n",
       " [    0     0     1     2     1     0     0]\n",
-      " [    2     0     0     0     0     0     0]] 0.996\n"
+      " [    2     0     0     0     0     0     0]] 0.998\n",
+      "[[11478     0     0     0     0     0     0]\n",
+      " [    1     6     0     6     0     0     0]\n",
+      " [   14     0    23     2     0     0     0]\n",
+      " [    0     0     1  2154     0     0     0]\n",
+      " [    1     0     0     0   808     0     0]\n",
+      " [    0     0     1     3     0     0     0]\n",
+      " [    2     0     0     0     0     0     0]] 0.998\n",
+      "[[11478     0     0     0     0     0     0]\n",
+      " [    3     6     0     4     0     0     0]\n",
+      " [   14     0    23     1     1     0     0]\n",
+      " [    0     0     0  2155     0     0     0]\n",
+      " [    1     0     0     0   808     0     0]\n",
+      " [    0     0     1     3     0     0     0]\n",
+      " [    2     0     0     0     0     0     0]] 0.998\n"
      ]
     }
    ],
@@ -2261,8 +2287,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 128,
    "source": [
+    "# Data splits (UNORMALIZED)\n",
+    "x, y = train_encoded_1.iloc[:,:-1].to_numpy(), train_encoded_1['over-50K'].to_numpy()\n",
+    "\n",
+    "# Split further for testing purposes (growing samples)\n",
+    "data_30 = train_encoded_1.sample(frac=0.30)\n",
+    "x_30, y_30 = data_30.iloc[:,:-1].to_numpy(), data_30['over-50K'].to_numpy()\n",
+    "\n",
+    "data_20 = train_encoded_1.sample(frac=0.20)\n",
+    "x_20, y_20 = data_20.iloc[:,:-1].to_numpy(), data_20['over-50K'].to_numpy()\n",
+    "\n",
+    "data_10 = train_encoded_1.sample(frac=0.10)\n",
+    "x_10, y_10 = data_10.iloc[:,:-1].to_numpy(), data_10['over-50K'].to_numpy()\n",
+    "\n",
     "x_test, y_test = test_encoded_1.iloc[:,:-1].to_numpy(), test_encoded_1['over-50K'].to_numpy()\n",
     "\n",
     "# 100 %\n",
@@ -2274,7 +2313,7 @@
     "print(confusion_matrix(y_test, test_pred), f'{acc:.3f}')\n",
     "\n",
     "# 30 %\n",
-    "best_model = tree.DecisionTreeClassifier(max_depth=7, criterion='entropy')\n",
+    "best_model = tree.DecisionTreeClassifier(max_depth=10, criterion='entropy')\n",
     "best_model.fit(x_30, y_30)\n",
     "test_pred = best_model.predict(x_test)\n",
     "\n",
@@ -2303,13 +2342,13 @@
      "name": "stdout",
      "text": [
       "[[10682   678]\n",
-      " [ 1514  2186]] 0.854\n",
-      "[[10667   693]\n",
-      " [ 1588  2112]] 0.849\n",
-      "[[10897   463]\n",
-      " [ 1926  1774]] 0.841\n",
-      "[[10676   684]\n",
-      " [ 1705  1995]] 0.841\n"
+      " [ 1512  2188]] 0.855\n",
+      "[[10640   720]\n",
+      " [ 1500  2200]] 0.853\n",
+      "[[10817   543]\n",
+      " [ 1745  1955]] 0.848\n",
+      "[[10776   584]\n",
+      " [ 1777  1923]] 0.843\n"
      ]
     }
    ],
@@ -3087,12 +3126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 129,
    "source": [
+    "# Data splits (UNORMALIZED)\n",
+    "x, y = dataset2_trn_full.iloc[:,:-1].to_numpy(), dataset2_trn_full['LABEL'].to_numpy()\n",
+    "\n",
+    "# Split further for testing purposes (growing samples)\n",
+    "data_30 = dataset2_trn_full.sample(frac=0.30)\n",
+    "x_30, y_30 = data_30.iloc[:,:-1].to_numpy(), data_30['LABEL'].to_numpy()\n",
+    "\n",
+    "data_20 = dataset2_trn_full.sample(frac=0.20)\n",
+    "x_20, y_20 = data_20.iloc[:,:-1].to_numpy(), data_20['LABEL'].to_numpy()\n",
+    "\n",
+    "data_10 = dataset2_trn_full.sample(frac=0.10)\n",
+    "x_10, y_10 = data_10.iloc[:,:-1].to_numpy(), data_10['LABEL'].to_numpy()\n",
+    "\n",
     "x_test, y_test = dataset2_test.iloc[:,:-1].to_numpy(), dataset2_test['LABEL'].to_numpy()\n",
     "\n",
     "# 100 %\n",
-    "best_model = tree.DecisionTreeClassifier(max_depth=6)\n",
+    "best_model = tree.DecisionTreeClassifier(max_depth=6, criterion='entropy')\n",
     "best_model.fit(x, y)\n",
     "test_pred = best_model.predict(x_test)\n",
     "\n",
@@ -3128,31 +3180,31 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[11477     0     1     0     0     0     0]\n",
-      " [    8     4     0     1     0     0     0]\n",
-      " [   15     0    24     0     0     0     0]\n",
-      " [    7     0     0  2148     0     0     0]\n",
+      "[[11478     0     0     0     0     0     0]\n",
+      " [    0    12     0     1     0     0     0]\n",
+      " [   14     0    25     0     0     0     0]\n",
+      " [    0     0     0  2155     0     0     0]\n",
+      " [    0     0     0     0   809     0     0]\n",
+      " [    0     0     4     0     0     0     0]\n",
+      " [    2     0     0     0     0     0     0]] 0.999\n",
+      "[[11478     0     0     0     0     0     0]\n",
+      " [    0    12     0     1     0     0     0]\n",
+      " [   14     2    23     0     0     0     0]\n",
+      " [    0     7     0  2148     0     0     0]\n",
       " [    1     0     0     0   808     0     0]\n",
       " [    0     0     4     0     0     0     0]\n",
-      " [    2     0     0     0     0     0     0]] 0.997\n",
+      " [    2     0     0     0     0     0     0]] 0.998\n",
       "[[11478     0     0     0     0     0     0]\n",
-      " [    6     4     0     3     0     0     0]\n",
-      " [   15     0    24     0     0     0     0]\n",
-      " [    1     0     0  2154     0     0     0]\n",
+      " [    8     4     0     1     0     0     0]\n",
+      " [   16     0    23     0     0     0     0]\n",
+      " [    3     1     1  2150     0     0     0]\n",
       " [    0     0     0     0   809     0     0]\n",
       " [    0     0     4     0     0     0     0]\n",
       " [    2     0     0     0     0     0     0]] 0.998\n",
       "[[11478     0     0     0     0     0     0]\n",
-      " [    8     4     0     1     0     0     0]\n",
-      " [   15     0    23     1     0     0     0]\n",
-      " [    1     0     0  2154     0     0     0]\n",
-      " [    1     0     0     0   808     0     0]\n",
-      " [    0     0     4     0     0     0     0]\n",
-      " [    2     0     0     0     0     0     0]] 0.998\n",
-      "[[11477     0     0     1     0     0     0]\n",
-      " [    8     0     4     1     0     0     0]\n",
-      " [   16     0    23     0     0     0     0]\n",
-      " [    5     0     2  2148     0     0     0]\n",
+      " [    8     2     1     2     0     0     0]\n",
+      " [   24     0    15     0     0     0     0]\n",
+      " [    8     0     0  2147     0     0     0]\n",
       " [    1     0     0     0   808     0     0]\n",
       " [    0     0     4     0     0     0     0]\n",
       " [    2     0     0     0     0     0     0]] 0.997\n"
